--- a/.env
+++ b/.env
@@ -25,7 +25,11 @@ APP_SECRET=576cf61eae42122234e24a6334c6b4bd
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
-DATABASE_URL="mysql://root:root_password@127.0.0.1:3306/WorkOut_DB?serverVersion=8&charset=utf8mb4"
+# ローカル用
+# DATABASE_URL="mysql://root:root_password@127.0.0.1:3306/WorkOut_DB?serverVersion=8&charset=utf8mb4"
+
+# heroku 本番用
+DATABASE_URL="mysql://b01bec4a858970:4ad66e99@eu-cdbr-west-03.cleardb.net/heroku_f4462f2231038a5?reconnect=true"
 
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
