--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,10 @@
     "license": "proprietary",
     "minimum-stability": "stable",
     "prefer-stable": true,
+    "name": "vendor-name/workout",
+    "description": "Symfony Framework",
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^2.7",
@@ -68,7 +70,7 @@
             "requirements-checker": "script"
         },
         "post-install-cmd": [
-            "@auto-scripts"
+            "@auto-scripts",
             "php bin/console doctrine:schema:update --force",
             "php bin/console doctrine:fixtures:load --append"
         ],
