--- a/composer.json
+++ b/composer.json
@@ -71,12 +71,12 @@
         },
         "post-install-cmd": [
             "@auto-scripts",
-            "php bin/console doctrine:schema:update --force",
-            "php bin/console doctrine:fixtures:load --append"
+            "php bin/console doctrine:schema:update --force"
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+
     },
     "conflict": {
         "symfony/symfony": "*"
