--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,8 @@
         },
         "post-install-cmd": [
             "@auto-scripts",
-            "php bin/console doctrine:schema:update --force"
+            "php bin/console doctrine:schema:update --force",
+            "php bin/console doctrine:fixtures:load --append"
         ],
         "post-update-cmd": [
             "@auto-scripts"
