--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/flex": "^2",
         "symfony/form": "6.1.*",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/intl": "6.1.*",
         "symfony/maker-bundle": "^1.45",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/requirements-checker": "^2.0",
