--- a/composer.json
+++ b/composer.json
@@ -9,24 +9,29 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-sqlite3": "*",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "easycorp/easyadmin-bundle": "^4",
+        "friendsofphp/php-cs-fixer": "^3.11",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "6.1.*",
+        "symfony/doctrine-bridge": "6.1.*",
         "symfony/dotenv": "6.1.*",
         "symfony/flex": "^2",
         "symfony/form": "6.1.*",
         "symfony/framework-bundle": "6.1.*",
         "symfony/intl": "6.1.*",
         "symfony/maker-bundle": "^1.45",
+        "symfony/password-hasher": "6.1.*",
         "symfony/proxy-manager-bridge": "6.1.*",
         "symfony/requirements-checker": "^2.0",
         "symfony/runtime": "6.1.*",
         "symfony/security-bundle": "6.1.*",
         "symfony/twig-bundle": "6.1.*",
+        "symfony/ux-chartjs": "^2.4",
         "symfony/validator": "6.1.*",
         "symfony/webpack-encore-bundle": "^1.15",
         "symfony/yaml": "6.1.*",
@@ -66,13 +71,11 @@
     },
     "scripts": {
         "auto-scripts": {
-            "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
             "requirements-checker": "script"
         },
         "post-install-cmd": [
-            "@auto-scripts",
-            "php bin/console doctrine:schema:update --force"
+            "@auto-scripts"
         ],
         "post-update-cmd": [
             "@auto-scripts"
