--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
+        "@symfony/ux-chartjs": "file:vendor/symfony/ux-chartjs/Resources/assets",
         "@symfony/webpack-encore": "^3.0.0",
         "core-js": "^3.23.0",
         "jquery": "^3.6.0",
@@ -14,12 +15,11 @@
     "private": true,
     "scripts": {
         "dev-server": "encore dev-server",
-        "dev": "encore dev",
-        "watch": "encore dev --watch",
-        "build": "encore production --progress"
+        "dev": "encore dev"
     },
     "dependencies": {
         "bootstrap-sass": "^3.4.3",
+        "chart.js": "^3.4.1",
         "express": "^4.18.1",
         "mysql": "^2.18.1"
     }
